tests/lean/lisp.lean.expected.out
lisp.lean:198:0: error: cannot evaluate (list "(" [] ")")
reader:   (list "(" [] ")")
expander: (list "(" [] ")")
resolver: (list "(" [] ")")
reader:   (list "(" [(list "(" [lambda (list "[" [x] "]") x] ")") 1] ")")
expander: (list "(" [(lambda_core (bind [x] x)) 1] ")")
resolver: (list "(" [(lambda_core (bind [x] x:0)) 1] ")")
evaluator: 1
reader:   (list "(" [(list "(" [lambda (list "[" [x y] "]") x] ")") 1 2] ")")
expander: (list "(" [(lambda_core (bind [x] (lambda_core (bind [y] x)))) 1 2] ")")
resolver: (list "(" [(lambda_core (bind [x] (lambda_core (bind [y] x:1)))) 1 2] ")")
evaluator: 1
reader:   (list "(" [let (list "(" [(list "[" [x 1] "]")] ")") x] ")")
expander: (let_core [1] (bind [x] x))
resolver: (let_core [1] (bind [x] x:0))
evaluator: 1
reader:   (list "(" [let (list "(" [(list "[" [tmp 5] "]")] ")") (list "(" [or 0 tmp] ")")] ")")
expander: (let_core [5] (bind [tmp] (let_core [0] (bind [tmp!3] (if tmp!3 tmp!3 tmp)))))
resolver: (let_core [5] (bind [tmp] (let_core [0] (bind [tmp!3] (if tmp!3:0 tmp!3:0 tmp:1)))))
evaluator: 5
